<resources>
    <string name="app_name">FlexicV1.0.1</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">todo</string>
    <string name="flexic">Flexic</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="surnamereg">Surname</string>
    <string name="usernamereg">Username</string>
    <string name="passwordreg">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="hello">Hello</string>
</resources>
